# docs/swagger/swagger.json
@@ -138,9 +138,6 @@
                             "$ref": "#/definitions/accounts.LoginResponse"
                         }
                     },
-                    "401": {
-                        "description": "Invalid password"
-                    },
                     "404": {
                         "description": "User not found"
                     },
@@ -178,6 +175,9 @@
             "type": "object",
             "properties": {
                 "access_token": {
+                    "type": "string"
+                },
+                "account_id": {
                     "type": "string"
                 },
                 "refresh_token": {
